refactor(query): resolve Sonar and compiler diagnostics across engine and query packages (#575)